[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/SaveSlot.gd" type="Script" id=1]
[ext_resource path="res://assets/UI_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/paper_theme.tres" type="Theme" id=3]
[ext_resource path="res://saves/default_preview.png" type="Texture" id=4]

[node name="SaveSlot" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1072.0
margin_bottom = 1912.0

[node name="TextureRect" type="TextureRect" parent="H"]
margin_right = 126.0
margin_bottom = 1904.0
texture = ExtResource( 4 )

[node name="V" type="VBoxContainer" parent="H"]
margin_left = 130.0
margin_right = 1064.0
margin_bottom = 1904.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="HBox1" type="HBoxContainer" parent="H/V"]
margin_right = 934.0
margin_bottom = 62.0

[node name="Savename" type="Label" parent="H/V/HBox1"]
margin_right = 664.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5
text = "Save 1"

[node name="Date" type="Label" parent="H/V/HBox1"]
margin_left = 668.0
margin_right = 934.0
margin_bottom = 62.0
size_flags_horizontal = 3
text = "31.05.2019"

[node name="HBox2" type="HBoxContainer" parent="H/V"]
margin_top = 66.0
margin_right = 934.0
margin_bottom = 128.0

[node name="EditSavename" type="LineEdit" parent="H/V/HBox2"]
margin_right = 620.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "savename"

[node name="ButtonChangeName" type="Button" parent="H/V/HBox2"]
margin_left = 624.0
margin_right = 934.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Change Name"

[node name="ButtonMakeDefault" type="CheckButton" parent="H/V/HBox2"]
visible = false
margin_left = 712.0
margin_right = 1064.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Default"

[node name="HBox3" type="HBoxContainer" parent="H/V"]
margin_top = 132.0
margin_right = 934.0
margin_bottom = 194.0

[node name="ButtonSave" type="Button" parent="H/V/HBox3"]
margin_right = 308.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save"

[node name="ButtonLoad" type="Button" parent="H/V/HBox3"]
margin_left = 312.0
margin_right = 621.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Load"

[node name="ButtonDelete" type="Button" parent="H/V/HBox3"]
margin_left = 625.0
margin_right = 934.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Delete"
[connection signal="pressed" from="H/V/HBox2/ButtonChangeName" to="." method="_on_ChangeNameButton_pressed"]
[connection signal="pressed" from="H/V/HBox3/ButtonSave" to="." method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="H/V/HBox3/ButtonLoad" to="." method="_on_ButtonLoad_pressed"]
[connection signal="pressed" from="H/V/HBox3/ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
